<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exomatik.kuliner.Activity.MainActivity"
    android:background="@color/putihGelap1"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_drawer_width"
        android:src="@drawable/bg_main"
        android:scaleType="fitXY"
        android:id="@+id/img_main"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_main"
        android:background="@drawable/border_rl_white"
        android:layout_marginTop="-30dp"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:padding="@dimen/margin_standard"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main"
                android:textColor="@color/hitamGray"
                android:textSize="@dimen/title_font"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"
                android:layout_centerHorizontal="true"
                android:id="@+id/text_main"
                android:layout_marginTop="@dimen/margin_standard"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/height40"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_main1"
                android:textColor="@color/putih"
                android:textSize="@dimen/title_font"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"
                android:textAllCaps="false"
                android:id="@+id/btn_main1"
                android:layout_below="@+id/text_main"
                android:background="@drawable/border_round_full_green"
                android:layout_marginTop="@dimen/margin_standard"
                android:elevation="@dimen/margin_standard"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/height40"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_main2"
                android:textColor="@color/putih"
                android:textSize="@dimen/title_font"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"
                android:textAllCaps="false"
                android:id="@+id/btn_main2"
                android:layout_below="@+id/btn_main1"
                android:background="@drawable/border_round_full_green"
                android:layout_marginTop="@dimen/margin_big"
                android:elevation="@dimen/margin_standard"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/height40"
                android:layout_centerHorizontal="true"
                android:text="@string/btn_main3"
                android:textColor="@color/putih"
                android:textSize="@dimen/title_font"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"
                android:textAllCaps="false"
                android:id="@+id/btn_main3"
                android:layout_below="@+id/btn_main2"
                android:background="@drawable/border_round_full_green"
                android:layout_marginTop="@dimen/margin_big"
                android:elevation="@dimen/margin_standard"
                />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_big"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:text="@string/text_sign_in"
            android:textColor="@color/hitamGray"
            android:textSize="@dimen/text_font"
            android:fontFamily="roboto_regular"
            />

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:textColor="@color/green1"
            android:textSize="@dimen/text_font"
            android:fontFamily="roboto_regular"
            />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:n3="http://schemas.android.com/apk/res-auto"
        android:layout_width="50.0dip"
        android:layout_height="50.0dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="190.0dip"
        android:elevation="8dp"
        android:src="@drawable/logo"
        n3:civ_circle_background_color="@color/putih"
        n3:civ_border_width="@dimen/margin_small"
        n3:civ_border_color="@color/putih"
        />
</RelativeLayout>
