<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exomatik.kuliner.Activity.MainActivity"
    android:background="@color/putihGelap1"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll"
        android:layout_above="@+id/sign_in"
        android:layout_alignParentTop="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_Pager"
                android:layout_width="match_parent"
                android:layout_height="240dp">

            </android.support.v4.view.ViewPager>

            <me.relex.circleindicator.CircleIndicator
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignBottom="@+id/view_Pager"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="@dimen/width30">

            </me.relex.circleindicator.CircleIndicator>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rl_white"
                android:layout_below="@+id/view_Pager"
                android:id="@+id/rl_main"
                android:layout_marginTop="-30dp"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_main"
                    android:textColor="@color/hitamGray"
                    android:textSize="@dimen/title_font"
                    android:textStyle="bold"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/text_main"
                    android:layout_marginTop="@dimen/margin_standard"
                    android:layout_marginBottom="@dimen/margin_standard"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width80"
                    android:layout_toLeftOf="@+id/img_center"
                    android:id="@+id/btn_main1"
                    android:layout_below="@+id/text_main"
                    android:background="@drawable/border_round_full_green"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:elevation="@dimen/margin_standard"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_main1"
                        android:textColor="@color/putih"
                        android:textSize="@dimen/title_font"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_regular"
                        android:textAllCaps="false"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:id="@+id/text1"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorit_white"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginBottom="@dimen/margin_standard"
                        android:layout_below="@+id/text1"
                        />
                </RelativeLayout>
                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/img_center"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width80"
                    android:id="@+id/btn_main2"
                    android:layout_toRightOf="@+id/img_center"
                    android:layout_below="@+id/text_main"
                    android:background="@drawable/border_round_full_green"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:elevation="@dimen/margin_standard"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_main2"
                        android:textColor="@color/putih"
                        android:textSize="@dimen/title_font"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_regular"
                        android:textAllCaps="false"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:layout_centerHorizontal="true"
                        android:textAlignment="center"
                        android:id="@+id/text2"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location_white"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/margin_standard"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_below="@+id/text2"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width80"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/btn_main3"
                    android:layout_below="@+id/btn_main2"
                    android:background="@drawable/border_round_full_green"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_standard"
                    android:layout_marginRight="@dimen/margin_standard"
                    android:layout_marginBottom="@dimen/margin_big"
                    android:paddingLeft="@dimen/margin_big"
                    android:paddingRight="@dimen/margin_big"
                    android:elevation="@dimen/margin_standard"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_main3"
                        android:textColor="@color/putih"
                        android:textSize="@dimen/title_font"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_regular"
                        android:textAllCaps="false"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/text3"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_cari_white"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/text3"
                        android:layout_marginLeft="@dimen/margin_small"
                        android:layout_marginBottom="@dimen/margin_standard"
                        />
                </RelativeLayout>
            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Makanan"
                android:textColor="@color/hitamGray"
                android:textSize="@dimen/title_font"
                android:fontFamily="@font/roboto_regular"
                android:layout_below="@+id/rl_main"
                android:id="@+id/text_makanan"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_big"
                />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rc_berita"
                android:layout_below="@+id/text_makanan"
                android:layout_marginLeft="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                >

            </android.support.v7.widget.RecyclerView>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_standard"
        android:id="@+id/sign_in"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:text="@string/text_sign_in"
            android:textColor="@color/hitamGray"
            android:textSize="@dimen/text_font"
            android:fontFamily="roboto_regular"
            />

        <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:textColor="@color/green1"
            android:textSize="@dimen/text_font"
            android:fontFamily="roboto_regular"
            />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:n3="http://schemas.android.com/apk/res-auto"
        android:layout_width="50.0dip"
        android:layout_height="50.0dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/margin_big"
        android:layout_marginTop="190.0dip"
        android:elevation="8dp"
        android:src="@drawable/logo"
        n3:civ_circle_background_color="@color/putih"
        n3:civ_border_width="@dimen/margin_small"
        n3:civ_border_color="@color/putih"
        />
</RelativeLayout>
